--- a/BlazorAdmin2/Pages/Compras/Icompra.razor
+++ b/BlazorAdmin2/Pages/Compras/Icompra.razor
@@ -113,7 +113,7 @@
 
 @code {
 
-    private CFichaCliente cFichaCliente = new CFichaCliente();
+    private Clientes cFichaCliente = new Clientes();
 
     public void variables()
     {
