--- a/BlazorAdmin2/Pages/Encomendas/Cencomenda.razor
+++ b/BlazorAdmin2/Pages/Encomendas/Cencomenda.razor
@@ -117,7 +117,7 @@
 
     @code {
 
-        private CFichaCliente cFichaCliente = new CFichaCliente();
+        private Clientes cFichaCliente = new Clientes();
 
         private async Task InsertFichaCliente()
         {
