--- a/BlazorAdmin2/Pages/Modelos/CModelo.razor
+++ b/BlazorAdmin2/Pages/Modelos/CModelo.razor
@@ -135,7 +135,7 @@
 
 @code {
 
-    private CFichaCliente cFichaCliente = new CFichaCliente();
+    private Clientes cFichaCliente = new Clientes();
 
     private async Task InsertFichaCliente()
     {
