--- a/BlazorAdmin2/Pages/Fornecedores/Cfornecedores.razor
+++ b/BlazorAdmin2/Pages/Fornecedores/Cfornecedores.razor
@@ -80,7 +80,7 @@
 
 @code {
 
-    private CFichaCliente cFichaCliente = new CFichaCliente();
+    private Clientes cFichaCliente = new Clientes();
 
     private async Task InsertFichaCliente()
     {
