--- a/BlazorAdmin2/Pages/Moldes/Cmolde.razor
+++ b/BlazorAdmin2/Pages/Moldes/Cmolde.razor
@@ -47,7 +47,7 @@
 
 @code {
 
-    private CFichaCliente cFichaCliente = new CFichaCliente();
+    private Clientes cFichaCliente = new Clientes();
 
     private async Task InsertFichaCliente()
     {
