--- a/BlazorAdmin2/Pages/Produtos/Cprodutos.razor
+++ b/BlazorAdmin2/Pages/Produtos/Cprodutos.razor
@@ -156,7 +156,7 @@
 
 @code {
 
-    private CFichaCliente cFichaCliente = new CFichaCliente();
+    private Clientes cFichaCliente = new Clientes();
 
     private async Task InsertFichaCliente()
     {
